Mudanças no HTML na página + testes iniciais e2e no Cypress

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="app_container bd-grid">
         <div class="app_data">
           <span class="section-subtitle app_initial">Redes Sociais</span>
-          <h2 class="section-title app_initial">Fale conosco nas redes sociais!</h2>
+          <h2 class="section-title app_initial">Nos encontre nas redes sociais!</h2>
           <p class="app_description">
             Postamos um conteúdo bem divertido e interativo no Instagram, confira e aproveite
             nossas promoções relâmpago!
@@ -194,20 +194,20 @@
           </p>
         </div>
 
-        <div class="contact_button">
+        <div>
           <section class="contact">
-            <h2 class="contact__title">Entre em contato</h2>
+            <h2 class="contact_title">Entre em contato</h2>
             <form class="contact__form" action="https://formspree.io/f/xqkogeey" method="POST">
-              <label class="contact__label" for="nome">Nome:</label>
-              <input class="contact__input" type="text" id="nome" name="nome" required>
+              <label class="contact_label" for="nome">Nome:</label>
+              <input class="contact_input" type="text" id="nome" name="nome" required>
 
-              <label class="contact__label" for="email">E-mail:</label>
-              <input class="contact__input" type="email" id="email" name="email" required>
+              <label class="contact_label" for="email">E-mail:</label>
+              <input class="contact_input" type="email" id="email" name="email" required>
 
-              <label class="contact__label" for="mensagem">Mensagem:</label>
-              <textarea class="contact__textarea" id="mensagem" rows="3" name="mensagem" required></textarea>
+              <label class="contact_label" for="mensagem">Mensagem:</label>
+              <textarea class="contact_textarea" id="mensagem" rows="3" name="mensagem" required></textarea>
 
-              <input class="contact__button" type="submit" value="Enviar">
+              <input class="contact_button" type="submit" value="Enviar">
             </form>
           </section>
         </div>
