Remoção dos style inline - melhoria do CSS e adição da futura pagina de produtos

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
             <a href="#contact" class="nav_link">Fale Conosco</a>
           </li>
 
-          <li><i class="bx bx-moon change-theme" id="theme-button"></i></li>
+          <li><i class="bx bx-moon change-theme icon_font_size" id="theme-button"></i></li>
         </ul>
       </div>
-
       <div class="nav_toggle" id="nav-toggle">
         <i class="bx bx-menu"></i>
       </div>
@@ -59,13 +58,13 @@
   </header>
 
   <main class="l-main">
-    <section class="home" id="home" style="padding-top: 60px;">
+    <section class="home home_padding" id="home">
       <div class="carousel">
-        <div><img id="minha-imagem_1" src="assets/img/1.png" data-src="assets/img/4.png"
+        <div><img id="minha-imagem_1" src="assets/img/carrossel_1.png" data-src="assets/img/carrossel_4.png"
             alt="Imagem do carrossel com detalhes sobre a loja"></div>
-        <div><img id="minha-imagem_2" src="assets/img/2.png" data-src="assets/img/5.png"
+        <div><img id="minha-imagem_2" src="assets/img/carrossel_2.png" data-src="assets/img/carrossel_5.png"
             alt="Imagem do carrossel com detalhes sobre a loja"></div>
-        <div><img id="minha-imagem_3" src="assets/img/3.png" data-src="assets/img/6.png"
+        <div><img id="minha-imagem_3" src="assets/img/carrossel_3.png" data-src="assets/img/carrossel_6.png"
             alt="Imagem do carrossel com detalhes sobre a loja"></div>
       </div>
     </section>
@@ -78,13 +77,14 @@
             Os melhores produtos para todos os seus bichinhos!
           </h2>
           <p class="about_description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis ante nunc, in tempus dui imperdiet
-            vitae. Curabitur vitae auctor justo.
+            Nosso Petshop se dedica a oferecer a melhor qualidade em atendimento e variedade de produtos para seu pet.
+            Além disso, garantimos uma entrega rápida e eficiente, para que você possa desfrutar dos produtos escolhidos
+            com seu amigo de quatro patas o mais breve possível.
           </p>
-          <a href="#" class="button">Get Started</a>
+          <a href="produtos.html" class="button">Confira nossos produtos</a>
         </div>
 
-        <img src="assets/img/petshop-about.jpg" style="border-radius: 10px;" alt="" class="about_img" />
+        <img src="assets/img/petshop-about.jpg" alt="" class="about_img" />
       </div>
     </section>
 
@@ -97,9 +97,8 @@
           <img class="services_img" src="assets/img/cavalo.png" alt="" />
           <h3 class="services_title">Produtos para Equinos</h3>
           <p class="services_description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis ante nunc, in tempus dui imperdiet
-            vitae. Curabitur vitae auctor justo. Nunc eu mattis ex. Curabitur congue risus id elit iaculis accumsan.
-            Cras vestibulum vestibulum lobortis.
+            Confira nossos produtos para equinos! Temos uma ampla variedade de suplementos alimentares, medicamentos e
+            acessórios para cuidar da saúde e bem-estar do seu cavalo.
           </p>
         </div>
 
@@ -107,24 +106,24 @@
           <img class="services_img" src="assets/img/pets.png" alt="" />
           <h3 class="services_title">Tudo para seu Pet!</h3>
           <p class="services_description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis ante nunc, in tempus dui imperdiet
-            vitae. Curabitur vitae auctor justo.
+            Melhore a qualidade de vida do seu pet com nossos produtos exclusivos! Alimentação saudável, acessórios de
+            qualidade e muito mais. Confira já!
           </p>
         </div>
 
         <div class="services_content">
           <img class="services_img" src="assets/img/medicina.png" alt="" />
-          <h3 class="services_title">Nos preocupamos com a saúde!</h3>
+          <h3 class="services_title">Em busca da saúde</h3>
           <p class="services_description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis ante nunc, in tempus dui imperdiet
-            vitae. Curabitur vitae auctor justo.
+            Seu pet merece toda a atenção e cuidado que você puder dar. Por isso, só trabalhamos com a maisalta
+            qualidade e segurança,a saúde e o bem-estar do seu melhor amigo são nossas maiores preocupações.
           </p>
         </div>
       </div>
 
-      <h2 class="section-title" style="padding-top: 10px;">O que os tutores mais querem</h2>
+      <h2 class="section-title section_menu_title">O que os tutores mais querem</h2>
       <div class="menu_container bd-grid">
-        <a href="#" style="cursor: pointer;">
+        <a href="produtos.html" class="tag_a_cursor_pointer">
           <div class="menu_content">
             <img src="assets/img/pet-food.png" alt="" class="menu_img" />
             <h3 class="menu_name">Ração</h3>
@@ -132,7 +131,7 @@
             <span class="menu_preci">a partir de R$ 2,00/kg</span>
           </div>
         </a>
-        <a href="#" style="cursor: pointer;">
+        <a href="produtos.html" class="tag_a_cursor_pointer">
           <div class="menu_content">
             <img src="assets/img/shampoo.png" alt="" class="menu_img" />
             <h3 class="menu_name">Produtos de Higiene</h3>
@@ -140,7 +139,7 @@
             <span class="menu_preci">a partir de R$ 6,00 </span>
           </div>
         </a>
-        <a href="#" style="cursor: pointer;">
+        <a href="produtos.html" class="tag_a_cursor_pointer">
           <div class="menu_content">
             <img src="assets/img/medication.png" alt="" class="menu_img" />
             <h3 class="menu_name">Remédios e Vitaminas</h3>
@@ -153,13 +152,13 @@
     </section>
 
 
-    <div style="text-align: center;">
-      <a href="https://contate.me/auto-escola-veja" style="margin: 0 auto;" target="_blank" class="button">Confira mais
+    <div class="text_align_center_div">
+      <a href="produtos.html" class="button">Confira mais
         produtos aqui</a>
     </div>
 
-    <section class="social_media section bd-container" id="social_media">
-      <div class="social_media_container bd-grid">
+    <section class="section bd-container" id="social_media">
+      <div class="social_media_container bd-grid_social_media">
         <div class="social_media_data">
           <span class="section-subtitle social_media_initial">Redes Sociais</span>
           <h2 class="section-title social_media_initial">Nos encontre nas redes sociais!</h2>
@@ -168,7 +167,7 @@
             nossas promoções relâmpago!
           </p>
           <div class="social_media">
-            <a href="https://www.instagram.com/belezacasadocriador"><i class="bx bxl-instagram"
+            <a href="https://www.instagram.com/belezacasadocriador" target="_blank"><i class="bx bxl-instagram"
                 class="social_media_icon"></i></a>
           </div>
         </div>
@@ -183,9 +182,9 @@
         Saiba onde nos encontrar
       </h2>
       <div class="map-container">
-        <iframe
+        <iframe class="iframe_border"
           src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d408.7649874982796!2d-38.477892950245106!3d-12.917370234087265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1681044342490!5m2!1spt-BR!2sbr"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          width="600" height="450" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
@@ -220,42 +219,44 @@
       </div>
     </section>
 
-    <footer class="footer section bd-container" style="text-align: center;">
+    <footer class="footer section bd-container text_align_center_div">
       <div class="footer_container bd-grid">
         <div class="footer_content">
           <a href="#" class="footer_logo">Contate-nos abaixo</a>
           <div>
-            <a href="#" class="footer_social"><i class="bx bxl-whatsapp"></i></a>
-            <a href="#" class="footer_social"><i class="bx bxl-instagram-alt"></i></a>
+            <a href="https://wa.link/6wdqu3" target="_blank" class="footer_social"><i class="bx bxl-whatsapp"></i></a>
+            <a href="https://www.instagram.com/belezacasadocriador" target="_blank" class="footer_social"><i
+                class="bx bxl-instagram-alt"></i></a>
           </div>
         </div>
 
         <div class="footer_content">
           <h3 class="footer_title">Produtos</h3>
           <ul>
-            <li><a href="#" class="footer_link">Alimentação</a></li>
-            <li><a href="#" class="footer_link">Higiene</a></li>
-            <li><a href="#" class="footer_link">Medicina Animal</a></li>
+            <li><a href="produtos.html" class="footer_link">Alimentação</a></li>
+            <li><a href="produtos.html" class="footer_link">Higiene</a></li>
+            <li><a href="produtos.html" class="footer_link">Medicina Animal</a></li>
           </ul>
         </div>
 
         <div class="footer_content">
-          <h3 class="footer_title">Information</h3>
+          <h3 class="footer_title">Dicas</h3>
           <ul>
-            <li><a href="#" class="footer_link">Events</a></li>
-            <li><a href="#" class="footer_link">Contact us</a></li>
-            <li><a href="#" class="footer_link">Privacy policy</a></li>
-            <li><a href="#" class="footer_link">Terms of services</a></li>
+            <li><a href="https://www.ative.pet/bem-estar/10-melhores-praticas-cuidado-com-animais-domesticos/"
+                target="_blank" class="footer_link">Dicas de como cuidar de pets</a></li>
+            <li><a
+                href="https://www.novaepoca.com.br/blog/dicas-para-os-pais-de-pet:-saiba-como-manter-seu-apartamento-sempre-organizado-e-cheiroso/323"
+                target="_blank" class="footer_link">Dicas para limpeza do seu lar</a></li>
           </ul>
         </div>
 
         <div class="footer_content">
-          <h3 class="footer_title">Endereço</h3>
+          <h3 class="footer_title">Informações</h3>
           <ul>
-            <li><a href="#" class="footer_link">Beleza - A Casa do Criador</a></li>
-            <li><a href="#" class="footer_link">Estrada Lobato/Campinas</a></li>
-            <li><a href="#" class="footer_link">(71) 9 9999-9999</a></li>
-            <li><a href="#" class="footer_link">acasadocriador@gmail.com</a></li>
+            <li class="footer_link">Beleza - A Casa do Criador</li>
+            <li class="footer_link">Estrada Lobato/Campinas</li>
+            <li><a href="tel:+5571991585781" class="footer_link">(71) 99158-5781</a></li>
+            <li><a href="mailto:belezacasadocriador@gmail.com" class="footer_link">belezacasadocriador@gmail.com</a></li>
           </ul>
         </div>
       </div>
@@ -275,7 +276,7 @@
     $(document).ready(function () {
       $('.carousel').slick({
         autoplay: true,
-        autoplaySpeed: 5000,
+        autoplaySpeed: 3500,
         dots: true,
         responsive: [
           {
