Criação e modificação da página equipe - Faltando inserir as fotos e o ultimo tópico

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             Além disso, garantimos uma entrega rápida e eficiente, para que você possa desfrutar dos produtos escolhidos
             com seu amigo de quatro patas o mais breve possível.
           </p>
-          <a href="produtos.html" class="button">Confira nossos produtos</a>
+          <a href="equipe.html" class="button">Conheça nossa equipe</a>
         </div>
 
         <img src="assets/img/petshop-about.jpg" alt="" class="about_img" />
@@ -272,7 +272,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 
-  <script>
+  <script type="text/javascript">
     $(document).ready(function () {
       $('.carousel').slick({
         autoplay: true,
@@ -282,18 +282,12 @@
           {
             breakpoint: 900,
             settings: {
-              arrows: false
+              arrows: true
             }
           }
         ]
       });
     });
-
-    AOS.init({
-      once: true,
-      delay: 100,
-    });
-
   </script>
 </body>
 
