Melhoria na página de equipe e melhoria no css

--- a/equipe.html
+++ b/equipe.html
@@ -63,7 +63,7 @@
             <h2 class="section-title">Nossos Melhores Funcionários</h2>
 
             <div class="services_container bd-grid">
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_1">
                     <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um Husky chamado Thor" />
                     <h3 class="employee_title">Thor - Gerente de Biscoitos</h3>
                     <p class="employee_description">
@@ -73,7 +73,7 @@
                     </p>
                 </div>
 
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_2">
                     <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de uma Sharpei chamada Athena" />
                     <h3 class="employee_title">Athena - Chefe de segurança</h3>
                     <p class="employee_description">
@@ -82,7 +82,7 @@
                         pela segurança dela, traga uma bola!
                     </p>
                 </div>
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_3">
                     <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um Sharpei chamado Zeus" />
                     <h3 class="employee_title">Zeus - Chefe de Segurança</h3>
                     <p class="employee_description">
@@ -90,7 +90,7 @@
                         dentes, melhor pensar duas vezes antes de tentar algo, ou ele mostrará seus verdadeiros dentes.
                     </p>
                 </div>
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_4">
                     <img class="employee_img" src="assets/img/cavalo.png"
                         alt="Foto de uma Boiadeiro Australiano chamada Maya" />
                     <h3 class="employee_title">Maya - Conferidora de Ração</h3>
@@ -100,7 +100,7 @@
                         não deixar sua comida perto dela, senão será devorada rapidinho.
                     </p>
                 </div>
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_5">
                     <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um cavalo chamado Querosene" />
                     <h3 class="employee_title">Querosene - Gerente de Delivery</h3>
                     <p class="employee_description">
@@ -110,7 +110,7 @@
                     </p>
                 </div>
 
-                <div class="employee_content">
+                <div class="employee_content" id="employee_content_6">
                     <img class="employee_img" src="assets/img/cavalo.png" alt="" />
                     <h3 class="employee_title">Produtos para Equinos</h3>
                     <p class="employee_description">
