--- a/index.html
+++ b/index.html
@@ -123,25 +123,25 @@
 
       <h2 class="section-title section_menu_title">O que os tutores mais querem</h2>
       <div class="menu_container bd-grid">
-        <a href="produtos.html" class="tag_a_cursor_pointer">
-          <div class="menu_content">
-            <img src="assets/img/pet-food.png" alt="" class="menu_img" />
+        <a href="produtos.html" class="tag_a_cursor_pointer" >
+          <div class="menu_content" id="menu_content_1">
+            <img src="assets/img/pet-food.png" alt="Icone de ração" class="menu_img" />
             <h3 class="menu_name">Ração</h3>
             <span class="menu_detail">O melhor para a barriga dos seus pets</span>
             <span class="menu_preci">a partir de R$ 2,00/kg</span>
           </div>
         </a>
         <a href="produtos.html" class="tag_a_cursor_pointer">
-          <div class="menu_content">
-            <img src="assets/img/shampoo.png" alt="" class="menu_img" />
+          <div class="menu_content" id="menu_content_2">
+            <img src="assets/img/shampoo.png" alt="Icone de produtos de higiene" class="menu_img" />
             <h3 class="menu_name">Produtos de Higiene</h3>
             <span class="menu_detail">Tudo para deixar seu pet lindo e cheiroso</span>
             <span class="menu_preci">a partir de R$ 6,00 </span>
           </div>
         </a>
         <a href="produtos.html" class="tag_a_cursor_pointer">
-          <div class="menu_content">
-            <img src="assets/img/medication.png" alt="" class="menu_img" />
+          <div class="menu_content" id="menu_content_3">
+            <img src="assets/img/medication.png" alt="Icone de remédios" class="menu_img" />
             <h3 class="menu_name">Remédios e Vitaminas</h3>
             <span class="menu_detail">Ajudando veterinários a curar seus melhores amigos</span>
             <span class="menu_preci">a partir de R$12,00</span>
