Finalização da página equipe, remoção da página produto e melhoria no código html

--- a/equipe.html
+++ b/equipe.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <a href="#" class="scrolltop" id="scroll-top">
+    <a href="index.html#home" class="scrolltop" id="scroll-top">
         <i class="bx bx-chevron-up scrolltop_icon"></i>
     </a>
 
@@ -59,12 +59,29 @@
     </header>
 
     <main class="l-main">
+
+        <section class="section bd-container">
+            <div class="social_media_container bd-grid_social_media">
+                <div class="social_media_data">
+                    <span class="section-subtitle social_media_initial">Nossos amigos!</span>
+                    <h2 class="section-title social_media_initial">Uma seção descontraida, conheça nossos pets!</h2>
+                    <p class="social_media_description">
+                        Aqui vamos apresentar o motivo de termos o nosso petshop, os nossos melhores amigos. Graças a
+                        eles, aprendemos como tratar de animais
+                        e a garantir o melhor serviço e qualidade para vocês!
+                    </p>
+                </div>
+
+                <img src="assets/img/socialmediapet.PNG" alt="" class="social_media__img" />
+            </div>
+        </section>
+
         <section class="services section bd-container">
             <h2 class="section-title">Nossos Melhores Funcionários</h2>
 
             <div class="services_container bd-grid">
                 <div class="employee_content" id="employee_content_1">
-                    <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um Husky chamado Thor" />
+                    <img class="employee_img" src="assets/img/thor.png" alt="Foto de um Husky chamado Thor" />
                     <h3 class="employee_title">Thor - Gerente de Biscoitos</h3>
                     <p class="employee_description">
                         Esse Husky é o chefe do departamento de biscoitos, mas não se deixe enganar por sua posição de
@@ -74,7 +91,7 @@
                 </div>
 
                 <div class="employee_content" id="employee_content_2">
-                    <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de uma Sharpei chamada Athena" />
+                    <img class="employee_img" src="assets/img/athena.png" alt="Foto de uma Sharpei chamada Athena" />
                     <h3 class="employee_title">Athena - Chefe de segurança</h3>
                     <p class="employee_description">
                         Essa Sharpei pode ser a chefe de segurança, mas ela é mais parecida com um cachorrinho do que
@@ -83,7 +100,7 @@
                     </p>
                 </div>
                 <div class="employee_content" id="employee_content_3">
-                    <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um Sharpei chamado Zeus" />
+                    <img class="employee_img" src="assets/img/zeus.png" alt="Foto de um Sharpei chamado Zeus" />
                     <h3 class="employee_title">Zeus - Chefe de Segurança</h3>
                     <p class="employee_description">
                         Já que Athena é mais relaxada com a segurança, Zeus faz o papel de proteger o lugar com unhas e
@@ -91,7 +108,7 @@
                     </p>
                 </div>
                 <div class="employee_content" id="employee_content_4">
-                    <img class="employee_img" src="assets/img/cavalo.png"
+                    <img class="employee_img" src="assets/img/maya.png"
                         alt="Foto de uma Boiadeiro Australiano chamada Maya" />
                     <h3 class="employee_title">Maya - Conferidora de Ração</h3>
                     <p class="employee_description">
@@ -101,7 +118,7 @@
                     </p>
                 </div>
                 <div class="employee_content" id="employee_content_5">
-                    <img class="employee_img" src="assets/img/cavalo.png" alt="Foto de um cavalo chamado Querosene" />
+                    <img class="employee_img" src="assets/img/querosene.png" alt="Foto de um cavalo chamado Querosene" />
                     <h3 class="employee_title">Querosene - Gerente de Delivery</h3>
                     <p class="employee_description">
                         Esse cavalo é o chefe de delivery do petshop, mas não se engane com sua gentileza, ele é um
@@ -111,11 +128,12 @@
                 </div>
 
                 <div class="employee_content" id="employee_content_6">
-                    <img class="employee_img" src="assets/img/cavalo.png" alt="" />
-                    <h3 class="employee_title">Produtos para Equinos</h3>
+                    <img class="employee_img" src="assets/img/apollo.png" alt="" />
+                    <h3 class="employee_title">Apollo - Recepcionista</h3>
                     <p class="employee_description">
-                        Confira nossos produtos para equinos! Temos uma ampla variedade de suplementos alimentares,
-                        medicamentos e acessórios para cuidar da saúde e bem-estar do seu cavalo.
+                        Apollo é um cachorro tão atencioso que, se você ficar doente, ele vai lhe trazer um saco de
+                        gelo, uma garrafa de água e um cartão de melhoras. Ele é tão fofo que, se você não gostar dele,
+                        ele vai continuar te amando mesmo assim.
                     </p>
                 </div>
             </div>
