--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <a href="#" class="scrolltop" id="scroll-top">
+  <a href="#home" class="scrolltop" id="scroll-top">
     <i class="bx bx-chevron-up scrolltop_icon"></i>
   </a>
 
@@ -84,7 +84,7 @@
           <a href="equipe.html" class="button">Conheça nossa equipe</a>
         </div>
 
-        <img src="assets/img/petshop-about.jpg" alt="" class="about_img" />
+        <img src="assets/img/petshop-about.jpg" alt="Image de itens de um petshop" class="about_img" />
       </div>
     </section>
 
@@ -94,7 +94,7 @@
 
       <div class="services_container bd-grid">
         <div class="services_content">
-          <img class="services_img" src="assets/img/cavalo.png" alt="" />
+          <img class="services_img" src="assets/img/cavalo.png" alt="um icone de cavalo" />
           <h3 class="services_title">Produtos para Equinos</h3>
           <p class="services_description">
             Confira nossos produtos para equinos! Temos uma ampla variedade de suplementos alimentares, medicamentos e
@@ -103,7 +103,7 @@
         </div>
 
         <div class="services_content">
-          <img class="services_img" src="assets/img/pets.png" alt="" />
+          <img class="services_img" src="assets/img/pets.png" alt="icone de pets" />
           <h3 class="services_title">Tudo para seu Pet!</h3>
           <p class="services_description">
             Melhore a qualidade de vida do seu pet com nossos produtos exclusivos! Alimentação saudável, acessórios de
@@ -112,7 +112,7 @@
         </div>
 
         <div class="services_content">
-          <img class="services_img" src="assets/img/medicina.png" alt="" />
+          <img class="services_img" src="assets/img/medicina.png" alt="icone de remédio" />
           <h3 class="services_title">Em busca da saúde</h3>
           <p class="services_description">
             Seu pet merece toda a atenção e cuidado que você puder dar. Por isso, só trabalhamos com a maisalta
@@ -151,12 +151,6 @@
 
     </section>
 
-
-    <div class="text_align_center_div">
-      <a href="produtos.html" class="button">Confira mais
-        produtos aqui</a>
-    </div>
-
     <section class="section bd-container" id="social_media">
       <div class="social_media_container bd-grid_social_media">
         <div class="social_media_data">
@@ -172,7 +166,7 @@
           </div>
         </div>
 
-        <img src="assets/img/socialmediapet.PNG" alt="" class="social_media__img" />
+        <img src="assets/img/socialmediapet.PNG" alt="imagem de cachorro usando o pc" class="social_media__img" />
       </div>
     </section>
 
